--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div id="header-right">
         <a href="#">Gmail</a>
         <a href="#">Images</a>
-        <a href="#" title="Google Apps">#</a>
+        <a href="#" class="btn_googleapps" title="Google Apps"></a>
+        <a href="#" class="btn_account" title="Google Account: Chris Coe (christopherdcoe@gmail.com"></a>
       </div>
     </header>
     <div class="content">
@@ -22,20 +23,30 @@
         <img src="img/googlelogo_color_272x92dp.png">
       </div>
       <form>
-        <div id="searchbar">
-          <div id="lens">
+        <div class="searchbar">
+          <div class="lens_container">
+            <span class="lens">
+              <svg focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24">
+                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+              </svg>
+            </span>
+              
 
           </div>
-          <div id="textfield">
-              <input type="text">
+          <div class="textfield">
+              <input type="text" title="Search">
           </div>
-          <div id="microphone">
-
+          <div class="microphone_container" title="Search by voice">
+            <span class="microphone"></span>
           </div>
         </div>
         
-        <input type="submit" class="btn" value="Google Search">
-        <input type="button" class="btn" value="I'm Feeling Lucky">
+        <div class="buttonrow">
+          <input type="submit" class="btn" value="Google Search">
+          <input type="button" class="btn" value="I'm Feeling Lucky">
+        </div>
       </form>
       <p>How one woman is using machine learning to track asteroids: <a href="#">Search On</a></p>
     <div>
